fixed overlapping issue on deo page for mobile view

--- a/skin/frontend/default/star-aurelia-responsive/css/mobile.css
+++ b/skin/frontend/default/star-aurelia-responsive/css/mobile.css
@@ -907,8 +907,10 @@ body.checkout-cart-index .title-buttons .btn-proceed-checkout span span {
 /***********/
 
 .back-product {
-	top: 110px;
+	top: -10px;
 }
+.product-essential.no-scroll-form{position:relative;}
+
 .catalog-product-view .mob-product-content h1 {
 	font-size: 16px; letter-spacing:0.1em;
 }
